--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "webpack": "^4.1.0"
+    "redux-thunk": "^2.2.0",
+    "webpack": "^3.11.0"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
@@ -34,5 +35,8 @@
   "bugs": {
     "url": "https://github.com/aschneit/SongCabin/issues"
   },
-  "homepage": "https://github.com/aschneit/SongCabin#readme"
+  "homepage": "https://github.com/aschneit/SongCabin#readme",
+  "devDependencies": {
+    "webpack-cli": "^2.0.10"
+  }
 }
