--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "font-awesome": "^4.7.0",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.14",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.2.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
@@ -28,7 +28,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "webpack"
+    "postinstall": "webpack",
+    "watch": "webpack --watch"
   },
   "engines": {
     "node": "6.7.0",
